# actions-launcher-demo

./: README.md  com.github.antolius.demo.yml  meson.build
data/: demo.desktop  demo.metainfo.xml  demo.service.in
src/: Application.vala
